# finartha-v2

./: pyproject.toml  requirements.txt
core/: analytics.py  stock_market.py
ui/: market.py  reports.py
